--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,14 @@
 <h1>Editing Book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @book do |f| %>
   <h4>title</h4>
   <%= f.text_field :title %>
@@ -7,8 +16,8 @@
   <h4>body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit '保存' %>
+  <%= f.submit 'Update Book' %>
 
-<%= link_to "edit", edit_book_path(@book.id) %>
+<%= link_to "show", { :action => "show" }, :method => "get" %>
 <%= link_to "back", { :action => "index" }, :method => "get" %>
 <% end %>
