--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,6 +4,16 @@
 
 <h1>Book</h1>
 
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>error
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+
 <table>
   <thead>
     <tr>
@@ -36,6 +46,6 @@
   <h4>body</h4>
   <%= f.text_area :body %>
 
-  <%= f.submit 'Create Box' %>
+  <%= f.submit 'Create Book' %>
 
 <% end %>
