--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,9 +13,9 @@
 <td><p><%= @book.body %></p></td>
 </tr>
 <tr>
-<td><%= link_to "edit", edit_book_path(@book.id) %></td>
+<td><%= link_to "Edit", edit_book_path(@book.id) %></td>
 <td>:</td>
-<td><%= link_to "back", { :action => "index" }, :method => "get" %></td>
+<td><%= link_to "Back", { :action => "index" }, :method => "get" %></td>
 </tr>
 </thead>
 </table>
